--- a/skills.src/updating-doc/SKILL.md.erb
+++ b/skills.src/updating-doc/SKILL.md.erb
@@ -3,28 +3,18 @@ name: updating-doc
 description: Update the documentation of the project. Use when a new development has been completed or when the USER is asking for documentation to be updated.
 ---
 
-# Updating doc
+<% XAeonAgentsSkills::GenHelpers.define_ordered_todo_list('Updating documentation') do -%>
+  ## Check the existing README content
 
-When updating documentation, follow those steps.
+  - ALWAYS read the existing README content and think about which parts of it should be updated with the task you just implemented.
+  - ALWAYS adapt the content to what is relevant for the task you implemented.
 
-<%= XAeonAgentsSkills::GenHelpers.init_skill_checklist %>
+  ## Update the README CLI usage section
 
-## 1. Inform the USER
+  - ALWAYS check if the real CLI options are documented correctly in the Usage section of the README file.
 
-- ALWAYS inform the user that you are running this skill, saying "SKILL: I am updating documentation".
+  ## Update the README table of content
 
-## 2. Check the existing README content
-
-- ALWAYS read the existing README content and think about which parts of it should be updated with the task you just implemented.
-- ALWAYS adapt the content to what is relevant for the task you implemented.
-
-## 3. Update the README CLI usage section
-
-- ALWAYS check if the real CLI options are documented correctly in the Usage section of the README file.
-
-## 4. Update the README table of content
-
-- Devise the hierarchical list of all Markdown headers that are in the README file, of all levels. Don't forget about headers that you may have added in previous steps.
-- ALWAYS make sure that the section "Table of Contents" of the README file is listing exactly all the headers as local links to their section, and indented in accordance with their hierarchical level in the file.
-
-<%= XAeonAgentsSkills::GenHelpers.validate_skill_checklist %>
+  - Devise the hierarchical list of all Markdown headers that are in the README file, of all levels. Don't forget about headers that you may have added in previous steps.
+  - ALWAYS make sure that the section "Table of Contents" of the README file is listing exactly all the headers as local links to their section, and indented in accordance with their hierarchical level in the file.
+<% end -%>
