--- a/skills.src/validating-production-quality/SKILL.md.erb
+++ b/skills.src/validating-production-quality/SKILL.md.erb
@@ -3,38 +3,28 @@ name: validating-production-quality
 description: Validates that the task is following all production-grade quality checks. Use before attempting task completion on a task or when the USER asks for it.
 ---
 
-# Validating production quality
+<% XAeonAgentsSkills::GenHelpers.define_ordered_todo_list('Validating production quality') do -%>
+  ## Fix any potential regression
 
-When validating production quality for the task at hand, follow those steps.
+  - ALWAYS run all test scenarios.
+  - ALWAYS fix all the failures that you see in the tests output.
 
-<%= XAeonAgentsSkills::GenHelpers.init_skill_checklist %>
+  ## Update documentation
 
-## 1. Inform the USER
+  - ALWAYS use `skill: updating-doc` to update the project documentation.
 
-- ALWAYS inform the user that you are running this skill, saying "SKILL: I am validating production quality".
+  ## Commit all pending modifications
 
-## 2. Fix any potential regression
+  - ALWAYS use `skill: committing-changes` to commit all your changes in the current branch.
 
-- ALWAYS run all test scenarios.
-- ALWAYS fix all the failures that you see in the tests output.
+  ## Sync the branch with its base
 
-## 3. Update documentation
+  - ALWAYS use `skill: syncing-branch-with-base` to make sure the current branch is up-to-date with its base.
+  - ALWAYS check that there is no merge commit between the current branch and its base.
+  - If you find any merge commit, ALWAYS remove them by rebasing the branch in a linear way.
 
-- ALWAYS use `skill: updating-doc` to update the project documentation.
+  ## Create a Pull Request for the current branch
 
-## 4. Commit all pending modifications
-
-- ALWAYS use `skill: committing-changes` to commit all your changes in the current branch.
-
-## 5. Sync the branch with its base
-
-- ALWAYS use `skill: syncing-branch-with-base` to make sure the current branch is up-to-date with its base.
-- ALWAYS check that there is no merge commit between the current branch and its base.
-- If you find any merge commit, ALWAYS remove them by rebasing the branch in a linear way.
-
-## 6. Create a Pull Request for the current branch
-
-- ALWAYS check on the corresponding GitHub project if there is already a Pull Request created for the current branch.
-- If there isn't any Pull Request for the current branch, ALWAYS use `skill: creating-pull-request` to create one.
-
-<%= XAeonAgentsSkills::GenHelpers.validate_skill_checklist %>
+  - ALWAYS check on the corresponding GitHub project if there is already a Pull Request created for the current branch.
+  - If there isn't any Pull Request for the current branch, ALWAYS use `skill: creating-pull-request` to create one.
+<% end -%>
