--- a/skills.src/committing-changes/SKILL.md.erb
+++ b/skills.src/committing-changes/SKILL.md.erb
@@ -1,6 +1,6 @@
 ---
 name: committing-changes
-description: Commits changes and pushes them on GitHub. Use when development and testing has been done and changes are ready to be committed and pushed to GitHub.
+description: Commits changes and pushes them on GitHub. What this does is stage relevant files, create a git commit and push it on Github. Use this when development and testing has been done and changes are ready to be committed and pushed to GitHub.
 ---
 
 <% XAeonAgentsSkills::GenHelpers.define_ordered_todo_list('Committing changes') do -%>
