--- a/skills.src/updating-doc/SKILL.md.erb
+++ b/skills.src/updating-doc/SKILL.md.erb
@@ -3,7 +3,7 @@ name: updating-doc
 description: Update the documentation of the project. What this does is update the README file of the project, its CLI usage and its Table of Content. Use this when a new development has been completed or when the USER is asking for documentation or README to be updated.
 ---
 
-<% XAeonAgentsSkills::GenHelpers.define_ordered_todo_list('Updating documentation') do -%>
+<% define_ordered_todo_list('Updating documentation') do -%>
   ## Check the existing README content
 
   - ALWAYS read the existing README content and think about which parts of it should be updated with the task you just implemented.
