--- a/skills.src/validating-production-quality/SKILL.md.erb
+++ b/skills.src/validating-production-quality/SKILL.md.erb
@@ -5,7 +5,7 @@ metadata:
   dependencies: updating-doc, committing-changes, syncing-branch-with-base, creating-pull-request
 ---
 
-<% XAeonAgentsSkills::GenHelpers.define_ordered_todo_list('Validating production quality') do -%>
+<% define_ordered_todo_list('Validating production quality') do -%>
   ## Fix any potential regression
 
   - ALWAYS run all test scenarios.
