--- a/skills.src/committing-changes/SKILL.md.erb
+++ b/skills.src/committing-changes/SKILL.md.erb
@@ -3,7 +3,7 @@ name: committing-changes
 description: Commits changes and pushes them on GitHub. What this does is stage relevant files, create a git commit and push it on Github. Use this when development and testing has been done and changes are ready to be committed and pushed to GitHub.
 ---
 
-<% XAeonAgentsSkills::GenHelpers.define_ordered_todo_list('Committing changes') do -%>
+<% define_ordered_todo_list('Committing changes') do -%>
   ## Stage all the files that should be part of the commit
 
   - Identify all the files that make sense to commit altogether as part of 1 commit.
