--- a/skills.src/implementing-github-issue/SKILL.md.erb
+++ b/skills.src/implementing-github-issue/SKILL.md.erb
@@ -5,7 +5,7 @@ metadata:
   dependencies: validating-production-quality
 ---
 
-<% XAeonAgentsSkills::GenHelpers.define_ordered_todo_list('Implementing a GitHub issue') do -%>
+<% define_ordered_todo_list('Implementing a GitHub issue') do -%>
   ## Get issue number
 
   - ALWAYS use `agent: ask_followup_question` to ask the USER which GitHub issue should be implemented, unless the USER already gave you this information in the prompt.
