--- a/skills.src/syncing-branch-with-base/SKILL.md.erb
+++ b/skills.src/syncing-branch-with-base/SKILL.md.erb
@@ -3,7 +3,7 @@ name: syncing-branch-with-base
 description: Syncs the current branch with its base. What this does is check the remote base branch, rebase the current one on the updated base and push it back to the remote. Use this when the base branch of the current branch may have diverged and you want to be sure that the current branch gets all latest changes of its base. This Skill is the canonical way to keep a branch up-to-date with its base. It must be used instead of merging the base branch, and always performs a rebase.
 ---
 
-<% XAeonAgentsSkills::GenHelpers.define_ordered_todo_list('Syncing the current branch with its base') do -%>
+<% define_ordered_todo_list('Syncing the current branch with its base') do -%>
   ## Find the base branch name
 
   - By default the base branch name is `main`.
