--- a/skills.src/validating-production-quality/SKILL.md.erb
+++ b/skills.src/validating-production-quality/SKILL.md.erb
@@ -22,11 +22,14 @@ metadata:
   ## Sync the branch with its base
 
   - ALWAYS use `skill: syncing-branch-with-base` to make sure the current branch is up-to-date with its base.
+
+  ## Remove any merge commit in the current branch
+
   - ALWAYS check that there is no merge commit between the current branch and its base.
-  - If you find any merge commit, ALWAYS remove them by rebasing the branch in a linear way.
+  - IF you find any merge commit, THEN ALWAYS remove them by rebasing the branch in a linear way, using `cli: git rebase`, and push again to the Github remote using `--force-with-lease` option.
 
   ## Create a Pull Request for the current branch
 
   - ALWAYS check on the corresponding GitHub project if there is already a Pull Request created for the current branch.
-  - If there isn't any Pull Request for the current branch, ALWAYS use `skill: creating-pull-request` to create one.
+  - IF there isn't any Pull Request for the current branch, THEN ALWAYS use `skill: creating-pull-request` to create one.
 <% end -%>
