--- a/skills.src/implementing-github-issue/SKILL.md.erb
+++ b/skills.src/implementing-github-issue/SKILL.md.erb
@@ -1,24 +1,14 @@
 ---
 name: implementing-github-issue
-description: Implements what is described in a GitHub issue. What this does is read the Github issue content, devise an implementation plan, execute it and validate production qualiy gates. Use this when the USER is asking you to implement a GitHub issue.
+description: Implements what is described in a GitHub issue. What this does is first devise an implementation plan from the issue, execute the plan and validate production qualiy gates. Use this when the USER is asking you to implement a GitHub issue.
 metadata:
-  dependencies: validating-production-quality
+  dependencies: analyzing-github-issue, validating-production-quality
 ---
 
 <% define_ordered_todo_list('Implementing a GitHub issue') do -%>
-  ## Get issue number
+  ## Analyze the Github issue requirements to get an implementation plan (can be done during PLAN mode)
 
-  - ALWAYS use `agent: ask_followup_question` to ask the USER which GitHub issue should be implemented, unless the USER already gave you this information in the prompt.
-
-  ## Get issue requirements
-
-  - Find this skill directory path, later referenced as {skill_path}.
-  - ALWAYS use `cli: ruby {skill_path}/scripts/issue_details {issue_number}` to retrieve all the details of this GitHub issue.
-
-  ## Come up with an implementation plan
-
-  - ALWAYS analyze the current code structure and content to understand how the GitHub issue should be implemented.
-  - ALWAYS analyze all the rules that you should adhere to when implementing a task.
+  - ALWAYS use `skill: analyzing-github-issue` to get a full implementation plan. This plan will take into consideration requirements from the issue, USER inputs and the project's context.
 
   ## Implement the issue following the implementation plan
 
@@ -27,5 +17,5 @@ metadata:
 
   ## Validate all production quality checks
 
-  - ALWAYS use `skill: validating-production-quality` before attempting task completion to make sure that all needed quality gates are ok.
+  - ALWAYS use `skill: validating-production-quality` before attempting task completion to make sure that all needed quality gates are passing.
 <% end -%>
